Proposal rejected. Stopping Wumpus code

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <script src="/js/lib/react.development.js" crossorigin></script>
     <script src="/js/lib/react-dom.development.js" crossorigin></script>
     <script src="/js/lib/babel.min.js"></script>
+    <script src="/js/utils.js"></script>
     <link href="/css/wumpus.css" rel="stylesheet"> <!--load all styles -->
      <link href="/res/fa-5/css/all.css" rel="stylesheet"> <!--load all styles -->
      <script defer src="/res/fa-5/js/all.js"></script> <!--load all styles -->
