Completed initial UI and basic game logic of Uno

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="/js/lib/react-dom.development.js" crossorigin></script>
     <script src="/js/lib/babel.min.js"></script>
     <script src="/js/utils.js"></script>
-    <link href="/css/wumpus.css" rel="stylesheet"> <!--load all styles -->
+    <link href="/css/uno.css" rel="stylesheet"> <!--load all styles -->
      <link href="/res/fa-5/css/all.css" rel="stylesheet"> <!--load all styles -->
      <script defer src="/res/fa-5/js/all.js"></script> <!--load all styles -->
   </head>
@@ -12,7 +12,7 @@
     <!-- <i class="fal fa-skull"></i> <!-- uses solid style -->
   <!-- Load our React component. -->
   <div id="react_main"></div>
-  <script src="/js/wumpus.jsx" type="text/babel"></script>
+  <script src="/js/uno.jsx" type="text/babel"></script>
   <script src="/js/react_init.jsx" type="text/babel"></script>
   </body>
 </html>
